--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "carlosfolio",
   "version": "0.1.0",
+  "homepage": "https://carlosvalv.github.io/carlosfolio",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
@@ -22,6 +23,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "carlosfolio -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -47,6 +50,7 @@
   },
   "devDependencies": {
     "@types/styled-components": "^5.1.26",
-    "@types/styled-components-react-native": "^5.2.1"
+    "@types/styled-components-react-native": "^5.2.1",
+    "gh-pages": "^5.0.0"
   }
 }
