--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "carlosfolio",
   "version": "0.1.0",
+  "homepage": "https://carlosvalv.github.io/carlosfolio",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
