--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^18.0.33",
     "@types/react-dom": "^18.0.11",
     "react": "^18.2.0",
+    "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0",
     "react-full-page": "^0.1.12",
     "react-router": "^6.10.0",
